@@ -2,6 +2,7 @@ Change log for Bos Wars
 -----------------------
 
 Development version:
+- Fixed bug #29096: Adjacent air units flicker in z-order (Jimmy Salmon)
 - Fixed bug #29533: No way to exit the campaign in the briefing screen (Jimmy Salmon)
 - Fixed bug #29389: Save/recall map position not preserved during save/reload of game (Jimmy Salmon)
 - Fixed bug #29284: Custom patches aren't completely cleaned (Jimmy Salmon)
